Bug 466751: setting .innerHTML to invalid markup in XHTML causes NS_ERROR_INVALID_POINTER, r+sr=jst